layout bugfix

--- a/static_html/css/main.css
+++ b/static_html/css/main.css
@@ -41,7 +41,7 @@ body {
   width: 100%
 }
 .layout.row.strech {
-  height: auto;
+  height: 100%;
 }
 
 .layout.cell {
